--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
+    "bootstrap-react": "^0.5.0-alpha.14",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "use-react-router": "^1.0.7",
