added explore and fixed randomizer pages

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_API_KEY = 
+REACT_APP_YELP_KEY = zIy_-Am2sxuQ8wlcksY3zpLwoIq85DLC8tYFOxjO-lqRygg2au113cIrL_rFZJqMcM3qy-3nWixMNAhR-5KHQU0E2wnAJuarbze0jPJYNJRLWbKiZFOdhkari6T9YXYx
+REACT_APP_TMDB_KEY = d456da079140215e827d17b4eb594e36
+REACT_APP_EVENT_KEY = 3LVGVWN7NUM55XRFQBJW
